[package]
name = "arch-installer"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
zstd = "0.13"
tar = "0.4"
walkdir = "2.5"
anyhow = "1.0"
dirs = "5.0"
nix = { version = "0.29", features = ["user"] }
tempfile = "3.12"
infer = "0.15" 
